Bug 241451 - "Open destination" after copying a folder opens a file instead of the folder
Summary: "Open destination" after copying a folder opens a file instead of the folder
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: notifications (other bugs)
Version First Reported In: 4.6.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-11 18:37 UTC by Alvaro Manuel Recio Perez
Modified: 2012-08-03 15:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Manuel Recio Perez 2010-06-11 18:37:41 UTC
Version:           unspecified (using Devel) 
OS:                Linux

I'm using KDE SC 4.4.85 (Beta 2) from Kubuntu packages.

After completing a copy job plasma shows a notification with an "Open destination" button. Clicking it should open the destination in an appropriate program.

When copying folders, the user expects that pressing that button the folder in which the copy has been made would open in Dolphin. However, plasma tries to open a file, presummably the last copied file inside that folder.

Reproducible: Always

Steps to Reproduce:
- Copy a folder with files in it.
- Wait for the copy to complete.
- Press "Open destination" on the notification.

Actual Results:  
A file (perhaps the last copied file) was opened.

Expected Results:  
The target folder should open.

OS: Linux (x86_64) release 2.6.32-22-generic
Compiler: cc
Comment 1 Marco Martin 2010-06-11 22:39:14 UTC
doesn't seem to always happen.
sometimes does, but is quite difficult to reproduce
Comment 2 Alvaro Manuel Recio Perez 2010-06-12 00:26:42 UTC
Sorry if I misled you. I tried three or four times with different folders and it always opened a file instead of the folder, so I assumed it always happened. Can I provide any information to help you fix the bug?
Comment 3 Alvaro Manuel Recio Perez 2010-06-29 18:02:34 UTC
Still present in KDE SC 4.5 RC1.
Comment 4 Alvaro Manuel Recio Perez 2010-07-16 13:04:45 UTC
Still present in KDE SC 4.5 RC2.

I don't know why but I think I can reliably reproduce the bug...
Comment 5 Alvaro Manuel Recio Perez 2010-12-22 13:04:06 UTC
I'm still able to reproduce the bug with KDE SC 4.5.85 (4.6 Beta 2).
Comment 6 Alvaro Manuel Recio Perez 2011-01-14 12:40:38 UTC
Still present in KDE SC 4.5.95 (4.6 RC2).
Comment 7 Thijs 2012-01-18 16:37:31 UTC
Right here, right now (4.7.4) I get the link to the folder, not the file. Is this one fixed by now?
Comment 8 Myriam Schweingruber 2012-05-17 11:27:05 UTC
Closing based on comment #7. Please feel free to reopen this report if you can still reproduce this with KDE 4.8.3 or later.
Comment 9 Alvaro Manuel Recio Perez 2012-05-17 11:41:12 UTC
I'm the original reporter of the bug.

I've tested this again and it seems that the link in the notification correctly points to the folder but clicking the "open" button in said notification stills opens a file from the folder instead of the folder itself.

(Using KDE SC 4.8.3.)
Comment 10 Martin Koller 2012-08-03 11:36:04 UTC
confirmed in KDE/4.9
Patch is here: https://git.reviewboard.kde.org/r/105837/
Comment 11 Martin Koller 2012-08-03 15:27:31 UTC
Git commit c8b92a11882e3beb98209ac3c51c34567e3af8cd by Martin Koller.
Committed on 03/08/2012 at 17:22.
Pushed by mkoller into branch 'KDE/4.9'.

Fix url used in "open" action

clicking the open button opened the last file when a complete folder was copied.
Fix this by changing the url as done in the jobs completedMessage()
FIXED-IN: 4.9.1

M  +8    -1    plasma/generic/applets/notifications/core/completedjobnotification.cpp

http://commits.kde.org/kde-workspace/c8b92a11882e3beb98209ac3c51c34567e3af8cd
Comment 12 Martin Koller 2012-08-03 15:28:20 UTC
Git commit 003c2ce18cea3cbcd79a3fbfa81e55162368cab8 by Martin Koller.
Committed on 03/08/2012 at 17:22.
Pushed by mkoller into branch 'master'.

Fix url used in "open" action

clicking the open button opened the last file when a complete folder was copied.
Fix this by changing the url as done in the jobs completedMessage()
FIXED-IN: 4.9.1

M  +8    -1    plasma/generic/applets/notifications/core/completedjobnotification.cpp

http://commits.kde.org/kde-workspace/003c2ce18cea3cbcd79a3fbfa81e55162368cab8