Fix url used in "open" action

clicking the open button opened the last file when a complete folder was copied.
Fix this by changing the url as done in the jobs completedMessage()

BUG: 241451
FIXED-IN: 4.9.1